# ChelikGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: Consts.cpp  Consts.h  GUI.cpp  GUI.h  Globals.cpp  Globals.h  ResourceManager.cpp  ResourceManager.h  main.cpp
src/Game/: Game.cpp  Game.h  SoundsManager.cpp  SoundsManager.h
